# kick

./: agent.py  config.py  main.py  prompts.py  pyproject.toml  ui.py
examples/welcomepage/: serve.py
functions/: bash.py  edit.py
kick/: agent.py  main.py  prompts.py
kick/examples/welcomepage/: index.html
kick/functions/: bash.py  edit.py  find.py  grep.py  ls.py  read.py  write.py
kick/ui/: app.py  providers.py  screens.py  utils.py  widgets.py
