[project]
name = "kick-agent"
version = "0.1.1"
description = "A simple CLI coding agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.4.0",
    "pydantic-ai>=1.105.0",
    "textual-dev>=1.8.0",
    "textual[syntax]>=8.2.7",
    "tomli-w>=1.2.0",
]

[project.scripts]
kick = "kick.main:main"
